--- a/scau_sim/src/perception/lidar_cluster/config/lidar_cluster.yaml
+++ b/scau_sim/src/perception/lidar_cluster/config/lidar_cluster.yaml
@@ -1,5 +1,5 @@
-raw_lidar_topic_name: /velodyne_points
+raw_lidar_topic_name: /points
 
 lidar_cluster_topic_name: /perception/lidar_cluster
 
-node_rate: 10   # [Herz]
+node_rate: 10 # [Herz]
