--- a/scau_sim/src/gps2odom/yaml/gps2odom.yaml
+++ b/scau_sim/src/gps2odom/yaml/gps2odom.yaml
@@ -6,21 +6,42 @@ navsat:
   magnetic_declination_radians: 0
   yaw_offset: 0
   zero_altitude: true
-  broadcast_utm_transform: false
+  broadcast_utm_transform: false    #是否广播从UTM（通用横轴墨卡托）坐标系到map坐标系的转换
   broadcast_utm_transform_as_parent_frame: false
   publish_filtered_gps: false
 
-# EKF for Navsat
-ekf_gps:
+# EKF for IMU
+ekf_imu:
   publish_tf: true
   map_frame: map
   odom_frame: odom
   base_link_frame: base_link
-  world_frame: map
+  world_frame: odom
 
   frequency: 50
   two_d_mode: true
   sensor_timeout: 0.01
+
+# ekf_gps_imu:
+#   # Basic frame parameters
+#   map_frame: map
+#   odom_frame: odom
+#   base_link_frame: base_link
+#   world_frame: odom
+
+#   # Sensor configuration
+#   imu0: /imu/data
+#   imu0_config: [false, false, false, false, false, true, false, false, false, false, false, true, true, false, false]
+#   odom0: /Odometry/gps  # Assuming this is the output of navsat_transform_node
+#   odom0_config: [true, true, false, false, false, false, false, false, false, false, false, false, false, false, false]
+
+#   # Frequency and other parameters
+#   frequency: 50
+#   two_d_mode: true
+#   sensor_timeout: 0.1
+  # Include other necessary parameters as in your existing configuration
+
+
   # -------------------------------------
   # External IMU:
   # -------------------------------------
