--- a/scau_sim/src/gazebo_nav/cfg/move_base/costmap_common_params.yaml
+++ b/scau_sim/src/gazebo_nav/cfg/move_base/costmap_common_params.yaml
@@ -6,14 +6,14 @@
 # 在这里，我们把它设置在3米，这意味着机器人只会更新其地图包含距离移动基座3米以内的障碍物的信息。
 # “raytrace_range”参数确定了用于清除指定范围外的空间。
 # 将其设置为3.0米，这意味着机器人将尝试清除3米外的空间，在代价地图中清除3米外的障碍物。
-footprint: [[0.10, 0.10], [0.10, -0.10], [-0.10, -0.10], [-0.10, 0.10]]
-obstacle_range: 2.5
-raytrace_range: 3.0
+footprint: [[0.50, 0.50], [0.50, -0.50], [-0.50, -0.50], [-0.50, 0.50]]
+obstacle_range: 3.0
+raytrace_range: 5.0
 static_layer:
   enabled: true
 obstacle_layer:
   enabled: true
-  track_unknown_space: true
+  track_unknown_space: False    #是否跟踪未知空间
   combination_method: 1
   obstacle_range: 2.5
   raytrace_range: 3.0
@@ -21,6 +21,6 @@ obstacle_layer:
   scan: {
     data_type: LaserScan,
     topic: /scan,
-    marking: true,
-    clearing: true
+    marking: False,       #不使用雷达更新和清除代价地图中的障碍物信息，可以暂时不用雷达来避障
+    clearing: False
   }
