--- a/scau_sim/src/gazebo_nav/cfg/move_base/local_costmap_params.yaml
+++ b/scau_sim/src/gazebo_nav/cfg/move_base/local_costmap_params.yaml
@@ -4,7 +4,7 @@
 # robot_base_frame:机器人本体的基坐标系;
 local_costmap:
   # global_frame: odom
-  global_frame: map
+  global_frame: odom
   robot_base_frame: base_link # base_footprint
   transform_tolerance: 0.5
   # update_frequency: 10.0
@@ -23,4 +23,4 @@ local_costmap:
   inflation_layer:
     enabled: true
     cost_scaling_factor: 10.0 # exponential rate at which the obstacle cost drops off (default: 10)
-    inflation_radius: 0.2 # max. distance from an obstacle at which costs are incurred for planning paths.
+    inflation_radius: 0.2 # 距离障碍物的距离的最大值，在超过该距离后规划路径会产生成本
