--- a/scau_sim/src/rslidar_sdk-v1.5.10/config/config.yaml
+++ b/scau_sim/src/rslidar_sdk-v1.5.10/config/config.yaml
@@ -12,16 +12,16 @@ lidar:
                                    #             RSM1, RSM1_JUMBO, RSM2, RSE1
       msop_port: 6699              #Msop port of lidar
       difop_port: 7788             #Difop port of lidar
-      start_angle: 290               #点云的起始角度。
-      end_angle: 70               #点云的结束角度。
+      start_angle: 250               #点云的起始角度。以中轴线开始顺时针算的，初始值为270~90
+      end_angle: 110               #点云的结束角度。
       wait_for_difop: true
-      min_distance: 1.5          #点云的最小距离。
+      min_distance: 1.25         #点云的最小距离。
       max_distance: 10          #点云的最大距离。
       use_lidar_clock: false       #True--Use the lidar clock as the message timestamp
                                    #False-- Use the system clock as the timestamp
       pcap_path: /home/robosense/lidar.pcap #The path of pcap file
     ros:
-      ros_frame_id: base_link                           #Frame id of packet message and point cloud message
+      ros_frame_id: /rslidar                           #Frame id of packet message and point cloud message
       ros_recv_packet_topic: /rslidar_packets          #从ROS接收激光雷达数据包的主题。
       ros_send_packet_topic: /rslidar_packets          #通过ROS发送激光雷达数据包的主题。
       ros_send_point_cloud_topic: /rslidar_points      #通过ROS发送激光雷达点云的主题。
