使用手动传参方式发布odom到odom0的转换；将所有静态坐标变换从tf改为tf2的方式；将融合后发布的odom话题改为odom0；去掉了纯跟踪里的矫正参数

--- a/scau_sim/src/gps2odom/yaml/gps2odom.yaml
+++ b/scau_sim/src/gps2odom/yaml/gps2odom.yaml
@@ -11,6 +11,7 @@ navsat:
   publish_filtered_gps: false
 
 # EKF for IMU
+# 下一次试验如果得不到odom0再试试改这下面的odom
 ekf_imu:
   publish_tf: true
   map_frame: map
