--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-
-scau_sim/build/pointcloud_to_laserscan/CMakeFiles/laserscan_to_pointcloud_node.dir/link.txt
 *.internal
 scau_sim/.vscode/c_cpp_properties.json
 *.json
-scau_sim/build/.built_by
-scau_sim/build/atomic_configure/.rosinstall
-scau_sim/build/CATKIN_IGNORE
 scau_sim/build
 scau_sim/devel
 scau_sim/.catkin_tools
 scau_sim/logs
+/scau_sim/src/gps2odom/scripts/odom_transformer.py
