整理各部分代码注释、说明等；将gps2odom的配置文件中的odom改为odom0等

--- a/scau_sim/src/gazebo_nav/cfg/move_base/costmap_common_params.yaml
+++ b/scau_sim/src/gazebo_nav/cfg/move_base/costmap_common_params.yaml
@@ -21,6 +21,6 @@ obstacle_layer:
   scan: {
     data_type: LaserScan,
     topic: /scan,
-    marking: False,       #不使用雷达更新和清除代价地图中的障碍物信息，可以暂时不用雷达来避障
-    clearing: False
+    marking: true,       
+    clearing: true
   }
